# glpibot

./: .env.bak  .gitignore  Dockerfile  api_tests.py  main.py  postmail_tests.py  pyproject.toml  report.py  storage_tests.py  webhook.py
core/: api.py  postapi.py  server.py
lib/: helper.py
lib/models/: ticket.py  user.py
storage/: storage.py
telegram/: api.py
telegram/keyboards/: tickets.py  user.py
telegram/routes/: report.py  tickets.py  users.py
